data/raw_logs/lexical/lex_33.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_33.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_33.c:1:24: error: exponent has no digits
    1 | int main() { float f = 0x1.5p; }
      |                        ^~~~~~
